--- a/tags.html
+++ b/tags.html
@@ -80,6 +80,8 @@ booma.net            </a>
   <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
   <ul class="list-group" id="social">
     <li class="list-group-item"><a href="http://github.com/gregorybooma"><i class="fa fa-github-square fa-lg"></i> GitHub</a></li>
+    <li class="list-group-item"><a href="https://twitter.com/gregorybooma"><i class="fa fa-twitter-square fa-lg"></i> Twitter</a></li>
+    <li class="list-group-item"><a href="https://www.linkedin.com/in/gregorybooma/"><i class="fa fa-linkedin-square fa-lg"></i> LinkedIn</a></li>
   </ul>
 </li>
 <!-- End Sidebar/Social -->
