--- a/authors.html
+++ b/authors.html
@@ -24,7 +24,7 @@
         <link rel="stylesheet" href="http://booma.net/theme/css/bootstrap.min.css" type="text/css"/>
     <link href="http://booma.net/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="http://booma.net/theme/css/pygments/monokai.css" rel="stylesheet">
+    <link href="http://booma.net/theme/css/pygments/solarizeddark.css" rel="stylesheet">
         <link href="http://booma.net/theme/css/typogrify.css" rel="stylesheet">
     <link rel="stylesheet" href="http://booma.net/theme/css/style.css" type="text/css"/>
 
@@ -51,6 +51,9 @@ booma.net            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                        <li >
+                            <a href="http://booma.net/category/pelican.html">Pelican</a>
+                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
             </ul>
@@ -64,6 +67,7 @@ booma.net            </a>
     <div class="row">
         <div class="col-sm-9">
   <h1>Authors on booma.net</h1>
+        <li><a href="http://booma.net/author/gregory-booma.html">Gregory Booma</a> (1)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
@@ -86,6 +90,7 @@ booma.net            </a>
 <li class="list-group-item">
   <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Recent Posts</span></h4>
   <ul class="list-group" id="recentposts">
+    <li class="list-group-item"><a href="http://booma.net/up-and-running-with-pelican.html">First Post Using&nbsp;Pelican</a></li>
   </ul>
 </li>
 <!-- End Sidebar/Recent Posts -->
@@ -110,7 +115,7 @@ booma.net            </a>
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy;  Gregory Booma
+         <div class="col-xs-10">&copy; 2017 Gregory Booma
             &middot; Powered by <a href="https://github.com/getpelican/pelican-themes/tree/master/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
