--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@ booma.net            </a>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li >
+                            <a href="http://booma.net/category/github.html">Github</a>
+                        </li>
+                        <li >
                             <a href="http://booma.net/category/pelican.html">Pelican</a>
                         </li>
             </ul>
@@ -96,6 +99,8 @@ booma.net            </a>
 <li class="list-group-item">
   <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Recent Posts</span></h4>
   <ul class="list-group" id="recentposts">
+    <li class="list-group-item"><a href="http://booma.net/fork-to-stand-alone-github-repo-while-keeping-history.html">From fork to stand-alone Github repo while keeping&nbsp;history</a></li>
+    <li class="list-group-item"><a href="http://booma.net/removing-the-forked-from-attribution-from-a-github-repo.html">Removing the forked from attribution from a GitHub&nbsp;repo</a></li>
     <li class="list-group-item"><a href="http://booma.net/up-and-running-with-pelican.html">First Post Using&nbsp;Pelican</a></li>
   </ul>
 </li>
