--- a/authors.html
+++ b/authors.html
@@ -57,6 +57,9 @@ booma.net            </a>
                         <li >
                             <a href="http://booma.net/category/pelican.html">Pelican</a>
                         </li>
+                        <li >
+                            <a href="http://booma.net/category/puzzles.html">Puzzles</a>
+                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
             </ul>
@@ -70,7 +73,7 @@ booma.net            </a>
     <div class="row">
         <div class="col-sm-9">
   <h1>Authors on booma.net</h1>
-        <li><a href="http://booma.net/author/gregory-booma.html">Gregory Booma</a> (2)</li>
+        <li><a href="http://booma.net/author/gregory-booma.html">Gregory Booma</a> (3)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
@@ -93,6 +96,7 @@ booma.net            </a>
 <li class="list-group-item">
   <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Recent Posts</span></h4>
   <ul class="list-group" id="recentposts">
+    <li class="list-group-item"><a href="http://booma.net/hopper-puzzle-part-1.html">Hopper Puzzle - Part&nbsp;1</a></li>
     <li class="list-group-item"><a href="http://booma.net/fork-to-stand-alone-github-repo-while-keeping-history.html">From fork to stand-alone GitHub repo while keeping&nbsp;history</a></li>
     <li class="list-group-item"><a href="http://booma.net/up-and-running-with-pelican.html">First Post Using&nbsp;Pelican</a></li>
   </ul>
