--- a/up-and-running-with-pelican.html
+++ b/up-and-running-with-pelican.html
@@ -70,6 +70,9 @@ booma.net            </a>
                         <li >
                             <a href="http://booma.net/category/puzzles.html">Puzzles</a>
                         </li>
+                        <li >
+                            <a href="http://booma.net/category/scripts.html">Scripts</a>
+                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
             </ul>
@@ -165,6 +168,7 @@ make github
 <li class="list-group-item">
   <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Recent Posts</span></h4>
   <ul class="list-group" id="recentposts">
+    <li class="list-group-item"><a href="http://booma.net/homebrew-standalone-script.html">Identifying Homebrew Standalone&nbsp;Formulas</a></li>
     <li class="list-group-item"><a href="http://booma.net/hopper-puzzle-part-1.html">Hopper Puzzle - Part&nbsp;1</a></li>
     <li class="list-group-item"><a href="http://booma.net/fork-to-stand-alone-github-repo-while-keeping-history.html">From fork to stand-alone GitHub repo while keeping&nbsp;history</a></li>
     <li class="list-group-item"><a href="http://booma.net/up-and-running-with-pelican.html">First Post Using&nbsp;Pelican</a></li>
@@ -192,7 +196,7 @@ make github
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2017 Gregory Booma
+         <div class="col-xs-10">&copy; 2018 Gregory Booma
             &middot; Powered by <a href="https://github.com/getpelican/pelican-themes/tree/master/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
